.provarCaches/00D410000011HE0EAM/objects/rstkf__vendorcrapp__c.object
<CustomObject>
    <description>vendorcrapp__c ; This is temporary table used for vendor credit application report or query execution.</description>
    <fields>
        <fullName>rstkf__vendorcrapp_agreemntdata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Agreement Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_allcurr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show All Currencies For Selected Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_apinvtxn_docno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Document Number</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Vendor Credit Applications (Payable Document Number)</relationshipLabel>
        <relationshipName>vendorcrapps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_apinvtxn_tranId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Transaction ID</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Vendor Credit Applications</relationshipLabel>
        <relationshipName>vendorcrapps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_beyonddtrange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stray Beyond Date Range</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_cmpno__c</fullName>
        <label>Company Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_enddate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterallgainloss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include All Gains/Losses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterapitem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter By AP Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterbookedgainloss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Booked Gains/Losses Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterbycurr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter on Document Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterbynonpo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non PO-Specific Item Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filterbypo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter By PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filtergainloss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter By Gain/Loss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_filteronvendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter By Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_gainlossdata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Gain/Loss Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_homecurr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Home Currency Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_ignorebookedscope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Booked Gain/Loss Restrict Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_ignorescope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore Gain/Loss Restriction Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_podata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show PO Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_polinedata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show PO Line Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_poreceiptdata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show PO Receipt Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_showdrmemo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Invoice DR Memo Side of Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_showvendorside__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Vendor Credit Side of Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_specapitempo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stray Beyond Specified AP Item Within PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_speccurr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stray Beyond Specified Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_specpolines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stray Beyond Specified PO Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_specpos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stray Beyond Specified POs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_specreceipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stray Beyond Specified Receipts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_startdate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_usrno__c</fullName>
        <label>User Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__vendorcrapp_vendno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Vendor Credit Applications</relationshipLabel>
        <relationshipName>vendorcrapps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Credit Application</label>
    <listViews>
        <fullName>rstkf__RS_Vendor_Credit_Applications</fullName>
        <columns>NAME</columns>
        <columns>rstkf__vendorcrapp_cmpno__c</columns>
        <columns>rstkf__vendorcrapp_vendno__c</columns>
        <columns>rstkf__vendorcrapp_apinvtxn_tranId__c</columns>
        <columns>rstkf__vendorcrapp_apinvtxn_docno__c</columns>
        <columns>rstkf__vendorcrapp_startdate__c</columns>
        <columns>rstkf__vendorcrapp_enddate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Credit Applications</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Vendor_Credit_Applications_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__vendorcrapp_cmpno__c</columns>
        <columns>rstkf__vendorcrapp_vendno__c</columns>
        <columns>rstkf__vendorcrapp_apinvtxn_tranId__c</columns>
        <columns>rstkf__vendorcrapp_apinvtxn_docno__c</columns>
        <columns>rstkf__vendorcrapp_startdate__c</columns>
        <columns>rstkf__vendorcrapp_enddate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Vendor Credit Applications - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Credit Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>